--- a/ProgettoSIW2019/src/main/resources/templates/listaRichieste.html
+++ b/ProgettoSIW2019/src/main/resources/templates/listaRichieste.html
@@ -1,17 +1,17 @@
-<!DOCTYPE HTML>
-<html>
+<!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-spring4-4.dtd">
+<html xmlns:th=http://www.thymeleaf.org xmlns="http://www.w3.org/1999/html">
 	<head>
 		<title>SILPH - RICHIESTE</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="static/css/main.css" />
+		<link rel="stylesheet" href="css/main.css" />
 	</head>
 	<body id="main">
         <section>
         	<header>
              	<h1><u>Lista Richieste:<u></h1><br>
             </header>
-        	<a href="AreaRiservata2.html" class="button">Indietro</a>
+        	<a href="#" class="button">Indietro</a>
         </section>
 	</body>
 </html>
