--- a/ProgettoSIW2019/src/main/resources/templates/fotografi.html
+++ b/ProgettoSIW2019/src/main/resources/templates/fotografi.html
@@ -47,7 +47,11 @@
 											    </li>
 											</ul>
 										</div>
+										
 								</div>
+								<footer>
+								      <a th:if="${role!=null}" th:href="@{/addFotografo}" class="button big">Aggiungi un Fotografo</a><br>
+						        </footer>
 						</section>
 				</section>
 		</div>
